update de categoria completo.

--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -22,7 +22,7 @@
                 <td><%= category.title %></td>
                 <td><%= category.slug %></td>
                 <td>
-                    <a  href="/admin/categorie/edit/<%= category.id %>" class="btn btn-warning">Editar</a>
+                    <a  href="/admin/categories/edit/<%= category.id %>" class="btn btn-warning">Editar</a>
                     <form method="post" class="delete-category" action="/categories/delete" style="display: inline;">
                         <input type="hidden" name="id" value="<%= category.id %>">
                         <button class="btn btn-danger">Deletar</button>
