--- a/views/admin/categories/edit.ejs
+++ b/views/admin/categories/edit.ejs
@@ -7,8 +7,9 @@
             <h2>Editar de categoria</h2>
         </div>
         <div class="card-body">
-            <form method="POST" action="/categories/save">
+            <form method="POST" action="/categories/update">
                 <input type="text" class="form-control" name="title" placeholder="Titulo da categoria" value="<%= category.title%>"><br>
+                <input type="hidden" name="id" value="<%= category.id %>">
                 <button class="btn btn-success">Atualizar</button>
             </form>
         </div>
